tmp.log
src/polyblock.c: In function ‘substitute_root_decrypt_slots’:
src/polyblock.c:438:20: error: too few arguments to function ‘generate_decrypt_stub’
  438 |         stub_src = generate_decrypt_stub(target, &diff, chosen, target->identifier);
      |                    ^~~~~~~~~~~~~~~~~~~~~
src/polyblock.c:126:7: note: declared here
  126 | char *generate_decrypt_stub(t_polyblock *target_blk, t_diff_result *diff,
      |       ^~~~~~~~~~~~~~~~~~~~~
src/polyblock.c:402:86: error: unused parameter ‘backend’ [-Werror=unused-parameter]
  402 | static int substitute_root_decrypt_slots(t_asm *a, t_polyctx *ctx, t_format_backend *backend)
      |                                                                    ~~~~~~~~~~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
make: *** [Makefile:30: obj/polyblock.o] Error 1
